--- a/templates/index.html
+++ b/templates/index.html
@@ -17,43 +17,6 @@
       <div>Dallas County jurors have the option of contributing their juror fund stipend to help at risk youth in the Dallas County Juvenile Department and the foster care system.  The Youth Services Advisory Board (YSAB) oversees the use of the Dallas County Juror Fund for special projects to address specific concerns related to juvenile crime prevention. In order to be eligible for YSAB recommendation, Dallas County Juvenile Department fund requestors must complete the following application. </div>
     </header>
 
-    <h3>Submission Instructions:</h2>
-        <ol>
-            <li>Applicants must answer all questions</li>
-            <li>Length of responses must adheare to the specified word limit indicated in the question</li>
-            <li>Applicants must submit the following documents electronically by grant due date submission:</li>
-              <ol>
-                <li>The two most recently filed IRS 990 forms</li>
-                <li>Latest verification of tax-exempt status from the IRS</li>
-                <li>Certificate of Formation from the State of Texas</li>
-                <li>Organization's current operating budget and year-to-date financial statements</li>
-                <li>Current list of board members</li>
-              </ol>
-            <li>Organizations <b>whose applications are approved for funding</b>, will receive their monies only if they are in compliance with the following requirements:</li>
-              <ol>
-                <li>Organization representatives in contact with youth under juvenile department supervision must complete the Dallas County Juvenile Department volunteer training and maintain all current Prison Rape Elimination Act standards. This includes a training session and a background check. The organization must be able to maintain these standards and requirements during the grant period.</li>
-                <li>Submit electronically:</li>
-                <ol>
-                  <li><u>Active Workers Compensation Insurance</u>
-                    <ol>
-                      <li>Bodily injury by accident - FIVE HUNDRED THOUSAND AND NO/100 DOLLARS ($500,000.00) each accident</li>
-                      <li>Bodily injury by disease - FIVE HUNDRED THOUSAND AND NO/100 DOLLARS ($500,000.00) each employee</li>
-                      <li>Bodily injury by disease - FIVE HUNDRED THOUSAND AND NO/100 DOLLARS ($500,000.00) policy limit</li>
-                    </ol>
-                  <li><u>Active Commercial General Liability Insurance</u></li>
-                    <ol>
-                      <li>It is Contractor's responsibility to make sure that it has a comprehensive general liability and professional insurance with "personal injury" coverage, with minimum limits of $1,000.000 for bodily injuries to or death of a person, and an aggregate of $500,000.00 for any one (1) occurrence is in place for the Contractor program.</li>
-                      <li>There is also an additional umbrella policy of $2,000,000 for events related to the covered activity but not outlined in the policy.</li>
-                    </ol>
-                </ol>
-              </ol>
-            <li>The Dallas County Juvenile Department maintains the right to take ownership of non-expendable equipment (equipment that can have a life of more than two years) purchased with juror grant funds once the organization ends programming with the Dallas County Juvenile Department. Electronic monitoring items are excluded from this provision.</li>    
-            <li>Applicants must click the submit button to complete the application</li>
-            <li>Organizations must report their project status semiannually.</li>
-            <li>Funding is for one year</li>
-            <li>Email documents to daniel.pacheco@dallascounty.org</li>
-          </ol>
-
     <p><b>Disclamer:</b> For privacy and security reasons, please be advised not to include any confidential or sensitive information in your submission.</p>
 
     <div>
@@ -164,15 +127,6 @@
     </div>
 
     <div>
-        <label for="facility">
-        Facility/Program to Administer the Project
-        </label>
-        <div>
-          <input id="facility" name="facility" type="text" class="field text fn" value="" size="8" tabindex="1">
-       </div>
-    </div>
-
-    <div>
         <label for="address">
         Address
         </label>
@@ -191,7 +145,7 @@
      </div>
 
     <div>
-      <label for="mission_statement">Mission Statement</label>
+      <label for="mission_statement">Organization Mission Statement</label>
       <div>
         <textarea id="mission_statement" name="mission_statement" spellcheck="true" rows="10" cols="50" tabindex="4" placeholder="Maximum 250 words"></textarea>
       </div>
@@ -230,60 +184,52 @@
    </div>
   </div>
 
-    <h3>Problem Statement</h3>
-
-    <div>
-      <label class="desc" id="problem_statement" for="problem_statement">(Identify the main challenge your program faces that will be addressed through using YSAB funds and how will they improve the program's objectives)</label>
-      <div>
-        <textarea id="problem_statement" name="problem_statement" spellcheck="true" rows="2" cols="50" tabindex="4" placeholder=""></textarea>
-      </div>
-  </div>
-
   <h3>Proposed Project</h3>
+
+  <div>
+    <label for="problem_statement"><b>Problem Statement</b><p>(Identify the main challenge your program faces that will be addressed through using YSAB funds and how will they improve the program's objectives)</p></label>
+    <div>
+      <textarea id="problem_statement" name="problem_statement" spellcheck="true" rows="8" cols="50" tabindex="4" placeholder=""></textarea>
+    </div>
+  </div>
 
     <div>
       <label for="target_group"><b>Target Group/Population</b><p>(Be <u><b>specific</b></u> about which youth from the program will benefit from expending these funds)</p></label>
       <div>
-        <textarea id="target_group" name="target_group" spellcheck="true" rows="10" cols="50" tabindex="4" placeholder="Maximum 250 words"></textarea>
+        <textarea id="target_group" name="target_group" spellcheck="true" rows="8" cols="50" tabindex="4" placeholder="Maximum 250 words"></textarea>
       </div>
    </div>
 
     <div>
-      <label class="desc" id="project_appoarch" for="project_appoarch"><b>Project Approach & Activities</b><p>(Provide a detailed justification for proposing this project, including specific items to be purchased with the funds)</p> <p>All items specified here must reflect the items in the section <i>Budget Estimate</i>.</p></label>
+      <label for="project_appoarch"><b>Project Approach & Activities</b><p>(Provide a detailed justification for proposing this project, including specific items to be purchased with the funds)</p> <p>All items specified here must reflect the items in the section <i>Budget Estimate</i>.</p></label>
       <div>
         <textarea id="project_appoarch" name="project_appoarch" spellcheck="true" rows="10" cols="50" tabindex="4" placeholder="Maximum 500 words"></textarea>
       </div>
   </div>
-
-    <!-- <div>
-      <label class="desc" id="program_manager" for="program_manager">Program Manager/Project Manager <p>(Provide the name(s) and title(s) of staff who will be responsible for the administration and management of any funds awarded)</p></label>
-      <div>
-        <textarea id="program_manager" name="program_manager" spellcheck="true" rows="10" cols="50" tabindex="4" placeholder="Maximum 500 words"></textarea>
-      </div>
-    </div> -->
       
   <h3>Performance Management </h3>
 
-  <!-- <div>
-    <label class="desc" id="goal_impact" for="goal_impact">
-      Goal Statement & Overall Impact <p>([1] Describe specifically how YSAB funding will help achieve the program's goals and [2] the overall programatic impact that will be realized because of the use of YSAB funds)</p>
-    </label>
-    <div>
-      <textarea id="goals_impact" name="goals_impact" spellcheck="true" rows="10" cols="50" tabindex="4" placeholder="Maximum 600 words"></textarea>
-    </div>
-  </div> -->
-
   <div>
-    <label class="desc" id="capacity_capabilities" for="capacity_capabilities"><b>Capacity & Capabilities</b><p>Provide the names and titles of staff who will be responsible for the administration, data collection/monitoring, and management of the project. Include a detailed data collection and analysis plan.</p></label>
+    <label for="capacity_capabilities"><b>Capacity & Capabilities</b><p>Provide the names and titles of staff who will be responsible for the administration, data collection/monitoring, and management of the project.</p></label>
     <div>
       <textarea id="capacity_capabilities" name="capacity_capabilities" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
     </div>
   </div>
 
+  
+  <div>
+    <label for="goals">
+      What are the project's goals?
+    </label>
+    <div>
+      <textarea id="goals" name="goals" spellcheck="true" rows="8" cols="50" tabindex="4" placeholder=""></textarea>
+    </div>
+  </div> 
+
   <br>
 
     <div>
-      <label class="desc" id="reporting_interval" for="reporting_interval">
+      <label for="reporting_interval">
           Select the suggested reporting interval for the expenditure of these funds.
       </label>
       <div>
@@ -335,7 +281,7 @@
     </div>  
 
     <div>
-      <label class="desc" id="outcome_measures" for="outcome_measures"><b>List Project Outcome Measures</b><p>(Outcome measures help determine whether the program is achieving its stated goals. For example, increasing the number of youth who make  the “honor roll,” or reduces the recidivism rate, or increasing the number and rate of youth who apply to a post-secondary institution)</p></label>
+      <label for="outcome_measures"><b>List Project Outcome Measures</b><p>(Outcome measures help determine whether the program is achieving its stated goals. For example, increasing the number of youth who make  the “honor roll,” or reduces the recidivism rate, or increasing the number and rate of youth who apply to a post-secondary institution)</p></label>
       <div>
         <table id="outcome_measures">
           <thead>
@@ -371,15 +317,15 @@
     </div>  
 
     <div>
-      <label class="desc" id="project_goal_impact" for="project_goal_impact"><b>Goal Statement & Overall Impact</b><p>Provide a detailed explanation of how the award of YSAB funds will advance the program's goals and help to achieve its desired outcomes.</p></label>
+      <label for="data_management"><b>Data Management </b><p>What data will be collected, how, and by whom to determine if the project is achieving the established output and outcome measures throughout the grant period? Include a detailed data collection and analysis plan.</p></label>
       <div>
-        <textarea id="project_goal_impact" name="project_goal_impact" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+        <textarea id="data_management" name="data_management" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
       </div>
     </div>
 
   <h3>Budget Summary</h3>
     <div>
-      <label class="desc" id="other_funding" for="other_funding">
+      <label for="other_funding">
         Provide the name of any other source of funding that may be used for this project. <p>(Indicate NONE if there are no other sources of funding)</p>
       </label>
       <div>
@@ -638,7 +584,7 @@
 
     <br><br>
     <div>
-      <label class="desc" id="print" for="print"><b>Optional: </b>Save a copy of your application via screenshot. Capture the current state of your application for reference using the following instructions based on your browser of choice.</label>
+      <label><b>Optional: </b>Save a copy of your application via screenshot. Capture the current state of your application for reference using the following instructions based on your browser of choice.</label>
       <div>
         <b>For Edge/Chrome:</b>
         <ol>
@@ -679,6 +625,6 @@
     </script>
   </form>
   <footer>
-    <p>Date Updated: May 15, 2024<br>
+    <p>Date Updated: May 16, 2024<br>
   </footer>
 </html>
