--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   </div>
 </div>
     <header>
-      <h2>Dallas County Juror Fund External Application (YSAB Funds)</h2>
+      <h2>Dallas County Juror Fund Application for Community-Based Organizations</h2>
       <div>Dallas County jurors have the option of contributing their juror fund stipend to help at risk youth in the Dallas County Juvenile Department and the foster care system.  The Youth Services Advisory Board (YSAB) oversees the use of the Dallas County Juror Fund for special projects to address specific concerns related to juvenile crime prevention. In order to be eligible for YSAB recommendation, Dallas County Juvenile Department fund requestors must complete the following application. </div>
     </header>
 
@@ -145,7 +145,7 @@
      </div>
 
     <div>
-      <label for="mission_statement">Organization Mission Statement</label>
+      <label for="mission_statement"><b>Organization Mission Statement</b></label>
       <div>
         <textarea id="mission_statement" name="mission_statement" spellcheck="true" rows="10" cols="50" tabindex="4" placeholder="Maximum 250 words"></textarea>
       </div>
