--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="{{url_for('static', filename='/style.css')}}"> 
-  <title>YSAB Ext. Application</title>   
+  <title>YSAB External Application</title>   
   <link rel="icon" href="{{url_for('static', filename='images/fav-icon-orange.svg')}}">
 </head>
 
@@ -17,7 +17,7 @@
       <div>Dallas County jurors have the option of contributing their juror fund stipend to help at risk youth in the Dallas County Juvenile Department and the foster care system.  The Youth Services Advisory Board (YSAB) oversees the use of the Dallas County Juror Fund for special projects to address specific concerns related to juvenile crime prevention. In order to be eligible for YSAB recommendation, Dallas County Juvenile Department fund requestors must complete the following application. </div>
     </header>
 
-    <p><b>Disclamer:</b> For privacy and security reasons, please be advised not to include any confidential or sensitive information in your submission.</p>
+    <p><b>Disclaimer:</b> For privacy and security reasons, please be advised not to include any confidential or sensitive information in your submission.</p>
 
     <div>
       <label for="name">Applicant Name</label>
@@ -334,13 +334,13 @@
     </div>
     <br>
     <div>
-      <label class="desc" id="budget_estimate" for="budget_estimate"><b>Budget Estimate</b>: Indicate the different categories of expenses proposed in the project. Provide, in the “Description” column, an explanation of each expense associated with the category.  Expenses listed in the budget must be justified in the Project Approach & Activities section.</label>
+      <label class="desc" id="budget_estimate" for="budget_estimate"><b>Budget Estimate</b>: Indicate the different categories of expenses proposed in the project. Provide, in the "Description" column, an explanation of each expense associated with the category.  Expenses listed in the budget must be justified in the Project Approach & Activities section.</label>
       <div>
         <p>Category definitions: Use the follow category definitions as guidelines for selecting the appropriate label.</p>
         <ul>
           <li><b>Food</b>: Expenses related to food for various occasions. Items could include but not limited to: lunch, dinners, snacks, refreshments, pantry items.</li>
           <li><b>Gifts</b>: Expenditures made as a gesture of goodwill, appreciation, or celebration. They are not tied to incentives or rewards for specific achievements or behaviors. Items could include but not limited to: gift bags, small electronics, notebooks, makeup.</li>
-          <li><b>SEM (Supplies, Equipment, Materials)</b>: Expenditures related to supplies, equipment, or materials for enchancing the program's activities and enriching the experience for participants. Items could include but not limited to: school/art supplies, games (table games, board games, gym games, etc.), books, decorations.</li>
+          <li><b>SEM (Supplies, Equipment, Materials)</b>: Expenditures related to supplies, equipment, or materials for enhancing the program's activities and enriching the experience for participants. Items could include but not limited to: school/art supplies, games (table games, board games, gym games, etc.), books, decorations.</li>
           <li><b>Field Trips</b>: Expenditures related to organizing and facilitating educational or recreational outings outside of the program's usual location.</li>
           <li><b>Clothing</b>: Expenditures related to the purchase of clothing items such as uniforms, or other attire, as needed.</li>
           <li><b>Scholarships</b>: Expenditures related to providing financial assistance to individuals to support their education. Scholarships may take various forms, including monetary awards, educational materials such as textbooks or laptops, or direct payment for tuition and/or fees to educational institutions.</li>
@@ -625,6 +625,6 @@
     </script>
   </form>
   <footer>
-    <p>Date Updated: May 16, 2024<br>
+    <p>Date Updated: May 17, 2024<br>
   </footer>
 </html>
